# jailbreak_root_detection

.dart_tool/: package_config.json  package_graph.json
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt  antifrida.cpp
android/src/main/kotlin/com/anish/trust_fall/externalstorage/: ExternalStorageCheck.kt
android/src/main/kotlin/com/w3conext/jailbreak_root_detection/frida/: AntiFridaNativeLoader.kt
